Fixed Permalink label visibility

--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -26,6 +26,8 @@
 
 /* https://developer.yahoo.com/blogs/ydn/clip-hidden-content-better-accessibility-53456.html */
 
+.sr-only,
+.sr-only-focusable:not(:focus),
 .visually-hidden,
 .screen-reader-text,
 .screen-reader-text span,
@@ -36,6 +38,9 @@
   width: 1px !important;
   border: 0 !important;
   overflow: hidden;
+  white-space: nowrap;
+  padding: 0 !important;
+  margin: -1px !important;
 }
 
 body:hover .visually-hidden a,
